src/test/deca/context/valid/avecObjet/method_with_var_instr.deca
// Description :
//    Définition de méthode avec declaration de variable et instruction return
//
// Resultats :
//    Ok

class A {
    int geta(){
        int a;
        return a;
    }
}