src/test/deca/context/invalid/avecObjet/double_method_asm.deca
// Description :
//    Définition de méthode methode asm avec int
//
// Resultats :
//    Erreur contextuelle
//    Ligne 10 : Méthode f déjà définie

class A {
    void f() asm("RTS");
    int f() asm("RTS");
}